--- a/css/styles.css
+++ b/css/styles.css
@@ -245,7 +245,12 @@ body {
 
 /* HERO */
 .hero-section {
-  background: url(../images/background.jpg);
+  background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.8),
+      rgba(47, 48, 58, 0.8)
+    ),
+    url(../images/background.jpg);
   color: var(--color-primary-background);
   padding: 200px 0px;
   height: 600px;
